      (Closes: #414200)
    - use the maintainer mbox as the default mbox (i.e. for --mbox and
      cached as $bug.mbox). The "raw" mboxes are now saved as $bug.raw.mbox
    - attempt to download version graphs in "full caching" mode
  * dscverify: Add --nosigcheck (Closes: #397720)
  * uscan: Fix typo in error message when combining --report-status and
    --verbose

  [ James Vega ]
  * debian/control: Add myself to the Uploaders list.
  * bts: chdir back to the invoking directory before leaving prunecache()
    (Closes: #413793)
  * scripts/Makefile: Specify an include directory when running Perl in order
    to handle the source restructuring.

 -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Tue, 13 Mar 2007 16:28:09 +0000

devscripts (2.9.27) unstable; urgency=low

  * checkbashisms: check for 'select' (thanks to James Abley, Ubuntu user)
  * debchange: add support for Ubuntu's distro codenames
  * debchange: add support for ~ in version numbers (Closes: #400173)

 -- Julian Gilbey <jdg@debian.org>  Fri,  1 Dec 2006 08:02:53 +0000

devscripts (2.9.26) unstable; urgency=low

  * deb-reversion: update to new upstream version (Closes: #329374)
  * debc/debi: handle specifying changes file on command line again
    (Closes: #398152)
  * debc/debi: handle arch all packages correctly (oops!) (Closes:
    #398597)
  * dget: new upstream version, supports looking in other places for
    files, new binnmu version scheme, --no-cache, file:// and copy:// and
    fixed bug that --help/--version required other arguments (Closes:
    #385954, #356208)
  * nmudiff: allow configuration of whether to send report to existing
    bugs or create a new bug (Closes: #397912)
  * uscan: avoid spurious undefined warning if --package is used

 -- Julian Gilbey <jdg@debian.org>  Fri, 17 Nov 2006 13:03:03 +0000

devscripts (2.9.25) unstable; urgency=low

  * nmudiff: reinstall mutt as mailer of choice, but now provide the
    option to use it or not (Closes: #397641)
