@@ -134,6 +134,8 @@ And now, in mostly alphabetical order, the scripts:
 - grep-excuses [wget]: grep the update_excuses.html file to find out
   what is happening to your packages.
 
+- manpage-alert [man-db]: locate binaries without corresponding manpages.
+
 - mass-bug [mailx | mailutils]: mass-file bug reports
 
 - mergechanges: merge .changes files from the same release but built
