@@ -297,6 +297,10 @@
 # 
 # No variables currently
 
+##### manpage-alert
+#
+# No variables currently
+
 ##### mass-bug
 # 
 # No variables currently
