@@ -1,0 +1,28 @@
+.TH MANPAGE-ALERT 1 "Debian Utilities" "DEBIAN" \" -*- nroff -*-
+.SH NAME
+manpage-alert \- check for binaries without corresponding manpages
+.SH SYNOPSIS
+\fBmanpage-alert\fR \fI[path list]\fR
+.br
+\fBmanpage-alert \-\-help|\-\-version\fR
+.SH DESCRIPTION
+\fBmanpage-alert\fR searches the given list of paths for binaries without 
+corresponding manpages.
+.P
+If no paths are specified on the command line, the path list
+\fI/bin /sbin /usr/bin /usr/sbin /usr/games\fR will be assumed.
+.SH OPTIONS
+.BR \-\-help ", " \-h
+Show a summary of options.
+.TP
+.BR \-\-version ", " \-v
+Show version and copyright information.
+.SH AUTHOR
+\fBmanpage-alert\fR was written by Branden Robinson and modified by
+Julian Gilbey <jdg@debian.org> and Adam D. Barratt 
+<debian\-bts@adam\-barratt.org.uk> (who also wrote this manpage) for the 
+devscripts package.
+.P
+This manpage and the associated program are licensed under the terms of 
+the GPL, version 2 or later.
+
