@@ -76,6 +76,8 @@ devscripts (2.9.28) UNRELEASED; urgency=low
   * dscverify: Add --nosigcheck (Closes: #397720)
   * uscan: Fix typo in error message when combining --report-status and
     --verbose
+  * manpage-alert: New script to locate binaries without corresponding
+    manpages (Closes: #414907)
 
   [ James Vega ]
   * debian/control: Add myself to the Uploaders list.
@@ -84,7 +86,7 @@ devscripts (2.9.28) UNRELEASED; urgency=low
   * scripts/Makefile: Specify an include directory when running Perl in order
     to handle the source restructuring.
 
- -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Tue, 13 Mar 2007 16:28:09 +0000
+ -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Thu, 15 Mar 2007 20:50:14 +0000
 
 devscripts (2.9.27) unstable; urgency=low
 
